--- a/config.yaml
+++ b/config.yaml
@@ -52,11 +52,11 @@ params:
 
     sidebar:
         emoji: 🍵
-        subtitle: R, Stata
+        subtitle: 경제 분석을 위한 R, Stata를 공부하는 블로그
         avatar:
             enabled: true
             local: true
-            src: img/IMG_5346.jpeg
+            src: img/avatar.png
 
     article:
         math: true
