--- a/config.yaml
+++ b/config.yaml
@@ -168,7 +168,7 @@ params:
 
     defaultImage:
         opengraph:
-            enabled: true
+            enabled: false
             local: false
             src:
 
