--- a/config.yaml
+++ b/config.yaml
@@ -38,7 +38,7 @@ permalinks:
 params:
     mainSections:
         - post
-    featuredImageField: image
+    featuredImageField: text
     rssFullContent: true
     favicon: /favicon.ico
 
